# hexagonal-architecture-python-spark

./: README.md  pyproject.toml  pytest.ini
data/: persons.csv
src/: core.py  main.py  main_test.py  main_use_case_test.py
src/cinema/core/domain/: movie_type.py
src/cinema/core/domain/services/: movie_domain_service.py  movie_service.py
src/cinema/core/ports/primary/: average_movie_budget_command.py  most_expensive_movie_command.py
src/cinema/core/ports/secondary/: movie_repository.py
src/cinema/core/use_cases/: average_budget_use_case.py  count_movie_use_case.py  most_expensive_movies.py
src/cinema/primary_adapters/cli/: main.py
src/cinema/primary_adapters/tests/: average_movie_budget_use_case_test.py  most_expensive_movies_use_case_test.py  movie_count_use_case_test.py
src/cinema/secondary_adapters/repositories/movie/: file_system_movie_repository.py  in_memory_movie_repository.py  kaggle_movie_repository.py
src/demography/: main_use_case_test.py
src/demography/core/: sample.py
src/demography/core/domain/: person_type.py
src/demography/core/domain/services/: movie_service.py  (+1 more)
src/demography/core/use_cases/: average_age.py  average_age_test.py  average_budget_use_case.py  count_movie_use_case.py  most_expensive_movies.py  most_expensive_movies_test.py  movie_use_cases_test.py
src/demography/primary_adapters/cli/: main.py
src/demography/primary_adapters/tests/: average_movie_budget_use_case_test.py  most_expensive_movies_use_case_test.py  movie_count_use_case_test.py
src/demography/secondary_adapters/: person_repository.py
(+8 files in other folders)
