[tool.poetry]
name = "data-engineering"
version = "0.1.0"
description = ""
authors = ["TCM Labs"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.3.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
